# inference-ext-cli

./: .gitignore  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: benchmark-benchtool-build.yml  ci.yml  release.yml
cmd/autobenchmark/: main.go
cmd/benchmark-dashboard/: Dockerfile  handlers_test.go  main.go
cmd/llm/: README.md  main.go
cmd/llmctl/: README.md  main.go
doc/: release-guide.md
doc/usage/: kubectl-rbg-benchmark.md  kubectl-rbg-llm-config.md  kubectl-rbg-llm-generate.md  kubectl-rbg-llm-model.md  kubectl-rbg-llm-svc.md  kubectl-rbg-rollout.md  kubectl-rbg-status.md  kubectl-rbg.md
docker/: README.md  autobenchmark-ctl.Dockerfile  autobenchmark-dashboard.Dockerfile  benchmark-dashboard.Dockerfile
docker/tools/: genai-bench.Dockerfile  model-downloader-huggingface.Dockerfile  model-downloader-modelscope.Dockerfile
examples/auto-benchmark/: README.md  config.yaml  template.yaml
inference_ext_cli/: __init__.py  generate.py  main.py  profile_live.py
inference_ext_cli/profile/: __init__.py  aiperf.py  benchmark.py  command.py  defaults.py  model_info.py  output.py  parallelization_mapping.py  profile_decode.py  profile_prefill.py  rbg_deployment.py
pkg/config/: config.go
pkg/util/: schema.go  util.go  util_test.go
tests/: test_aiperf.py  test_config_modifiers.py  test_generate.py  test_output.py  test_parallelization.py
tools/: changelog.sh
tools/genai/: README.md
tools/optuna/: optuna_bridge.py
ui/auto-benchmark/: package.json
ui/benchmark-viewer/: .gitignore  Dockerfile  index.html  (+3 more)
(+148 files in other folders)
